<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <include layout="@layout/design_top_bar"
        app:layout_constraintBottom_toTopOf="@id/body"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Saved items" />

    <ScrollView
        android:id="@+id/body"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/md_theme_light_surfaceVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar">

        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingBottom="40dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/user_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SettingsUserCard">

                <LinearLayout android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/user_card_icon"
                        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                        android:text="A"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:gravity="center"
                        app:backgroundTint="@color/md_theme_light_inversePrimary"
                        android:textColor="@color/md_theme_light_onPrimaryContainer"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"/>

                    <LinearLayout android:orientation="vertical"
                        android:gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView android:id="@+id/user_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/member_name"
                            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"/>

                        <TextView android:id="@+id/member_status_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/member_status"
                            android:textColor="@color/md_theme_light_primary"
                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"/>
                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- SETTING MENU TABS -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/MenuTab"
                android:layout_marginTop="2dp"
                android:text="@string/settings_menu_item1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/MenuTab"
                android:layout_marginTop="2dp"
                android:text="@string/settings_menu_item2" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/MenuTab"
                android:layout_marginTop="8dp"
                android:text="@string/settings_menu_item3" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/MenuTab"
                android:layout_marginTop="2dp"
                android:text="@string/settings_menu_item4" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/MenuTab"
                android:layout_marginTop="2dp"
                android:text="@string/settings_menu_item5" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/MenuTab"
                android:layout_marginTop="8dp"
                android:text="@string/settings_menu_item6" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/MenuTab"
                android:layout_marginTop="2dp"
                android:text="@string/settings_menu_item7" />

            <!-- LOG OUT -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:gravity="center"
                android:background="@color/white"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                android:textColor="@color/md_theme_light_onSurface"
                android:layout_marginTop="8dp"
                android:text="@string/log_out"
                android:onClick="clickDisabledFunction"/>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>