<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutFragment">

    <!-- TOP BAR -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Checkout"
        style="@style/BaseTopBar"
        app:navigationIcon="@drawable/icon_chevron_left"

        app:layout_constraintBottom_toTopOf="@id/body"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- SCROLLVIEW -->
    <ScrollView android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        android:background="@color/md_theme_light_surfaceVariant">

        <!-- MAIN CONTENT -->
        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:paddingBottom="40dp">

            <!-- MY INFORMATION  -->
            <TextView style="@style/CheckoutTab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkout_member_info"
                app:drawableEndCompat="@drawable/icon_chevron_right"/>

            <!-- BILLING ADDRESS -->
            <TextView style="@style/CheckoutTab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkout_billing_info" />

            <!-- SHIPPING -->
            <TextView style="@style/CheckoutTab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkout_shipping_info" />

            <!-- PAYMENT -->
            <TextView style="@style/CheckoutTab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:text="@string/checkout_payment_info" />

            <!-- COST BREAKDOWN -->
            <LinearLayout android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:paddingTop="24dp"
                android:paddingBottom="0dp"
                android:background="@color/white">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/checkout_discount_label"
                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkout_apply_discount_label"
                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textColor="@color/black"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:dividerThickness="2dp"
                    app:dividerColor="@color/md_theme_light_outline"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/checkout_order_value"
                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"/>

                    <TextView android:id="@+id/checkout_order_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkout_order_value_amount"
                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/checkout_discount"
                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkout_discount_amount"
                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textColor="@color/md_theme_light_primary"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/checkout_delivery_fee"
                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkout_delivery_amount"
                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/checkout_taxes"
                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"/>

                    <TextView android:id="@+id/checkout_taxes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkout_taxes_amount"
                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:dividerThickness="2dp"
                    app:dividerColor="@color/black"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="24dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/checkout_total"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                        android:textColor="@color/black"/>

                    <TextView android:id="@+id/checkout_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkout_total_amount"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textColor="@color/black"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <!-- CHECKOUT: id/complete_checkout_button -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="24dp">

                <!-- TERMS & CONDITIONS -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkout_terms_conditions"
                    android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                    android:textColor="@color/md_theme_light_onSurfaceVariant"/>

                <!-- PRIVACY NOTICE -->
                <TextView
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkout_privacy_notice"
                    android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                    android:textColor="@color/md_theme_light_onSurfaceVariant"/>

                <!-- CHECKOUT BUTTON -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/complete_checkout_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="28dp"
                    android:layout_marginBottom="24dp"
                    android:onClick="clickCart"
                    android:text="@string/checkout_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/body" />
            </LinearLayout>

            <!-- EXTRAS -->
            <LinearLayout android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <!-- SHIPPING & HANDLING -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MenuTab"
                    android:text="@string/checkout_shipping_handling"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textColor="@color/md_theme_light_onSurface"
                    android:textStyle="bold"
                    android:lineHeight="24dp"
                    app:drawableEndCompat="@drawable/icon_arrow_fwd"/>

                <!-- RETURN POLICY -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MenuTab"
                    android:text="@string/checkout_return_policy"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textColor="@color/md_theme_light_onSurface"
                    android:textStyle="bold"
                    android:lineHeight="24dp"
                    app:drawableEndCompat="@drawable/icon_arrow_fwd"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!-- SUCCESS SCREEN: id/purchase_success_screen -->
    <LinearLayout android:visibility="gone"
        android:id="@+id/purchase_success_screen"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white">

        <!-- CLOSE BUTTON -->
        <com.google.android.material.button.MaterialButton
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            style="@style/ButtonIcon"
            app:icon="@drawable/icon_clear"
            app:backgroundTint="@color/md_theme_light_surfaceVariant"
            android:onClick="clickCart" />

        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:gravity="center">

            <Button
                android:id="@+id/user_card_icon"
                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                app:icon="@drawable/icon_check"
                app:iconTint="@color/white"
                android:gravity="center"
                app:backgroundTint="@color/md_theme_light_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"/>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkout_success_title"
                android:textAppearance="@style/EmptyFragmentTitle"
                android:textStyle="bold"
                android:gravity="center"/>
            <TextView
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkout_success_text"
                android:textAppearance="@style/EmptyFragmentText"
                android:gravity="center"/>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>