<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmptyCartFragment">

    <include layout="@layout/design_top_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Shopping cart" />

    <!-- EMPTY CART: id/empty_cart -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/empty_cart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar">

        <TextView app:layout_constraintVertical_chainStyle="packed"
            android:id="@+id/emptyCartTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_empty_title"
            android:textAppearance="@style/EmptyFragmentTitle"
            app:layout_constraintBottom_toTopOf="@id/emptyCartText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView app:layout_constraintVertical_chainStyle="packed"
            android:id="@+id/emptyCartText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cart_empty_text"
            android:layout_marginTop="8dp"

            android:textAppearance="@style/EmptyFragmentText"
            app:layout_constraintBottom_toTopOf="@id/empty_cart_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emptyCartTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/empty_cart_button"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="clickCart"
            android:text="@string/cart_empty_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emptyCartText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>